Implement bury/suspend note. Allows for all cards from a note to be buried/suspended instead of just card.
